--- a/WeatherApp/Views/Home/Index.cshtml
+++ b/WeatherApp/Views/Home/Index.cshtml
@@ -13,7 +13,7 @@
         <div>
             <p><input type="text" id="cityName" name="cityName"></p>
 
-            <p><input type="submit" value="Отправить форму"></p>
+            <p><input type="submit" value="Отправить"></p>
         </div>
     }
     @if (Model != null)
